@@ -34,7 +34,7 @@ pytest-asyncio = "^0.23.5"
 pytest-cov = "^4.1.0"
 ruff = "^0.4.0"
 mypy = "^1.9.0"
-testcontainers = {extras = ["postgresql"], version = "^3.7.0"}
+testcontainers = {extras = ["postgresql", "redis"], version = "^3.7.0"}
 
 [build-system]
 requires = ["poetry-core"]
